--- a/3-Retrieval_Evaluation_Week1.ipynb
+++ b/3-Retrieval_Evaluation_Week1.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "aa6a6f95-91c6-4a08-a3a0-2aafc2d56b77",
    "metadata": {},
    "outputs": [],
@@ -100,10 +100,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c9968b62-3814-40b9-bb2a-8c76968825c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Num queries in Golden Dataset: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">100</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Num queries in Golden Dataset: \u001b[1;36m100\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from retrieval_evaluation import calc_hit_rate_scores, calc_mrr_scores, record_results, add_params\n",
     "from llama_index.finetuning import EmbeddingQAFinetuneDataset\n",
@@ -114,15 +128,24 @@
     "#################\n",
     "\n",
     "# Load QA dataset\n",
-    "golden_dataset = None\n",
+    "golden_dataset = EmbeddingQAFinetuneDataset.from_json('./data/golden_100.json')\n",
     "\n",
     "# should see 100 queries\n",
     "print(f'Num queries in Golden Dataset: {len(golden_dataset.queries)}')\n",
     "\n",
     "### Instantiate Weaviate client and set Class name\n",
     "# read env vars from local .env file\n",
-    "client = None\n",
-    "class_name = None\n",
+    "api_key = os.environ['WEAVIATE_API_KEY']\n",
+    "url = os.environ['WEAVIATE_ENDPOINT']\n",
+    "\n",
+    "#instantiate client\n",
+    "client = WeaviateClient(api_key, url)\n",
+    "\n",
+    "#check if WCS instance is live and ready\n",
+    "client.is_live(), client.is_ready()\n",
+    "\n",
+    "\n",
+    "class_name = 'ImpactTheoryMiniLm256'\n",
     "\n",
     "#check if WCS instance is live and ready\n",
     "\n",
@@ -150,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "255bdabd-770e-4b12-8bd8-54e5cdc64f77",
    "metadata": {},
    "outputs": [],
@@ -269,15 +292,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d42568cd-d0e3-4640-8865-37b6dff80307",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bdd80f8960d544c4abfa4e9b90533f9f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Queries:   0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Total Processing Time: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.2</span> minutes\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Total Processing Time: \u001b[1;36m0.2\u001b[0m minutes\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#################\n",
     "##  START CODE ##\n",
     "#################\n",
-    "results = None"
+    "results = retrieval_evaluation(golden_dataset,class_name=class_name,retriever=client)\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "61be703d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">{</span>\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'n'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">5</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'Retriever'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'sentence-transformers/all-MiniLM-L6-v2'</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'chunk_size'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">256</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'kw_hit_rate'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.72</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'kw_mrr'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.59</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'vector_hit_rate'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.37</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'vector_mrr'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.29</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'total_misses'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">25</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'total_questions'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">100</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'maxConnections'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">32</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'efConstruction'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">128</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'ef'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">64</span>\n",
+       "<span style=\"font-weight: bold\">}</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m{\u001b[0m\n",
+       "    \u001b[32m'n'\u001b[0m: \u001b[1;36m5\u001b[0m,\n",
+       "    \u001b[32m'Retriever'\u001b[0m: \u001b[32m'sentence-transformers/all-MiniLM-L6-v2'\u001b[0m,\n",
+       "    \u001b[32m'chunk_size'\u001b[0m: \u001b[1;36m256\u001b[0m,\n",
+       "    \u001b[32m'kw_hit_rate'\u001b[0m: \u001b[1;36m0.72\u001b[0m,\n",
+       "    \u001b[32m'kw_mrr'\u001b[0m: \u001b[1;36m0.59\u001b[0m,\n",
+       "    \u001b[32m'vector_hit_rate'\u001b[0m: \u001b[1;36m0.37\u001b[0m,\n",
+       "    \u001b[32m'vector_mrr'\u001b[0m: \u001b[1;36m0.29\u001b[0m,\n",
+       "    \u001b[32m'total_misses'\u001b[0m: \u001b[1;36m25\u001b[0m,\n",
+       "    \u001b[32m'total_questions'\u001b[0m: \u001b[1;36m100\u001b[0m,\n",
+       "    \u001b[32m'maxConnections'\u001b[0m: \u001b[1;36m32\u001b[0m,\n",
+       "    \u001b[32m'efConstruction'\u001b[0m: \u001b[1;36m128\u001b[0m,\n",
+       "    \u001b[32m'ef'\u001b[0m: \u001b[1;36m64\u001b[0m\n",
+       "\u001b[1m}\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(results)"
    ]
   },
   {
@@ -458,9 +560,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "openai",
+   "display_name": "impactenv",
    "language": "python",
-   "name": "openai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -472,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
